1. support logs path mapping; 2. add JVM_OPTIONS; 3. add TRON_OPTIONS; 4. simplifying the path hierarchy of the database directory